# boom-bot

./: 4  CMakeLists.txt  README.md  package.xml
config/: cloud_bot.rviz  drive_bot.rviz  gaz_ros2_ctl_use_sim.yaml  joystick.yaml  laser_filter.yaml  mapper_bot.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  navigate_bot.rviz  navigation_params_online_async.yaml  navigator_params_online_async.yaml  twist_mux.yaml
description/: camera.xacro  constants.xacro  depth_camera.xacro  frame_properties.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  sizes.xacro
description/settings/: frame_properties.xacro  materials.xacro
launch/: camera.launch.py  hlslidar.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_simple_nav_robot.launch.py  localization_launch.py  mapper_robot.launch.py  navigation_launch.py  navigation_robot.launch.py  online_async_launch.py  rsp.launch.py
maps/: obstacle_map_save.pgm  obstacle_map_save.yaml  obstacle_map_serial.data  real_map_save.pgm  real_map_save.yaml  real_map_serial.data  real_map_serial.posegraph
rviz/: mapper_bot.rviz  navigate_bot.rviz  view_bot.rviz
scripts/: goal_offset_nav.py  motor_driver.py  neural_net_nav.py  visual_nav.py
worlds/: obstacle.world
